# My-Python-Project-Template

./: .pre-commit-config.yaml  Dockerfile  README.md  bump_version.py  pyproject.toml
src/: app.py  config.py  init.py  main.py
src/app/: example.py
