[project]
name = "my-template"
version = "0.1.0"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "D",      # pydocstyle
  "CPY",    # flake8-copyright
  "PGH003", # blanket-type-ignore
  "COM812", # trailing comma missing (not recommended when using formatter)
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.12", "uvicorn>=0.34.3"]
