[project]
name = "my-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=4.0.0a6",
    "fastapi[standard]>=0.116.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "D",      # pydocstyle
  "CPY",    # flake8-copyright
]

[dependency-groups]
dev = [
    "gitpython>=3.1.45",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
    "semver>=3.0.4",
    "uvicorn>=0.35.0",
]

[tool.mypy]
strict = true
allow_redefinition = true
local_partial_types = true
allow_redefinition_new =true
